--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
     = javascript_include_tag "index"
+    = javascript_include_tag "ajax"
   %body
     .container
       #top-bar.row
