--- a/app/views/catalog/category.html.haml
+++ b/app/views/catalog/category.html.haml
@@ -42,8 +42,9 @@
   - props = {}
   - @products.map {|p| p.text.split(/\r\n/).map {|r| r.split(/:/) } }.each do |prop|
     - prop.each do |s|
-      - props[s[0]] ||= []
-      - props[s[0]] << s[1].strip
+      - if !s[1].blank?
+        - props[s[0]] ||= []
+        - props[s[0]] << s[1].strip
 
   =# debug props
 
