--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -1,7 +1,9 @@
 !!!
 %html
   %head
-    %title Mebel
+    %title= yield(:title)
+    %meta{:name => "description", :content => yield(:description)}
+    %meta{:name => "keywords", :content => yield(:keywords)}
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
@@ -47,7 +49,7 @@
           .row
             .span12
               %p
-                Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
+                = Setting.find_by_name(:footer_text).value
 
     .footer
       .container
@@ -56,7 +58,7 @@
             %h4 Информация
             %ul
               %li
-                %a{:href => "about.html"} О нас
+                %a{:href => "#"} О нас
               %li
                 %a{:href => "#"} Информация о доставке
               %li
@@ -69,7 +71,7 @@
               %li
                 %a{:href => "#"} Корзина
               %li
-                %a{:href => "#"} Акции и спецпоедложения
+                %a{:href => "#"} Акции
               %li
                 %a{:href => "#"} Контакты
           .span3.socseti
