--- a/app/views/catalog/category.html.haml
+++ b/app/views/catalog/category.html.haml
@@ -1,3 +1,7 @@
+- content_for :title, Setting.find_by_name(:site_name).value + " " + Setting.find_by_name(:divider).value +  " " + @category.page_title
+- content_for :description, @category.page_description
+- content_for :keywords, @category.page_keywords
+
 -#.row.filter_top
   .span12
     #main-menu.navbar
