--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -2,7 +2,7 @@
   .span12
     %ul.breadcrumb
       %li
-        %a{:href => "#"}
+        %a{:href => "/"}
           %i.icon-home
         %span.divider /
       %li.active О нас
