--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -1,3 +1,7 @@
+- content_for :title, Setting.find_by_name(:site_name).value + " " + Setting.find_by_name(:divider).value +  " " + Setting.find_by_name(:index_title).value
+- content_for :description, Setting.find_by_name(:index_description).value
+- content_for :keywords, Setting.find_by_name(:index_keywords).value
+
 .row
   .span12
     #slider.slider_init.show_slide
