--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -44,12 +44,12 @@
 
       = yield
 
-      .block_content.container.dop_info_footer
+      -#.block_content.container.dop_info_footer
         .products_list.text_block
           .row
             .span12
               %p
-                = @settings[:footer_text]
+                =# @settings[:footer_text]
 
     .footer
       .container
