--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -58,7 +58,7 @@
                       %a.dropdown-toggle{:href => "/specials"}
                         Акции и спецпредложения
                     %li.dropdown{:class => params[:controller] == "help" ? "active" : ""}
-                      %a.dropdown-toggle{:href => "/howto"}
+                      %a.dropdown-toggle{:href => "/help"}
                         Как заказать
                     -#%li.dropdown
                       %a.dropdown-toggle{:href => "/about"}
