--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -86,7 +86,7 @@
           .row
             .span12
               %p
-                = @settings[:footer_text]
+                = @settings["footer_text"]
 
     .footer
       .container
