--- a/app/views/admin/settings/_form.html.haml
+++ b/app/views/admin/settings/_form.html.haml
@@ -4,6 +4,10 @@
     .controls
       = text_field_tag "setting[name]", @setting.name
   .control-group
+    %label.control-label{:for => "setting_description"} Описание
+    .controls
+      = text_field_tag "setting[description]", @setting.description
+  .control-group
     %label.control-label{:for => "setting_value"} Значение
     .controls
       = text_area_tag "setting[value]", @setting.value, :rows => 5
