--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -87,7 +87,7 @@
                 = hidden_field_tag "texture[#{pt.id}][as_img]", 0
                 = check_box_tag "texture[#{pt.id}][as_img]", 1, pt.as_img.to_i == 1
             %td
-              - if pt.as_img.to_i == 1
+              - if pt and pt.as_img.to_i == 1
                 - if pt.kind_main.to_i > 0
                   - km = Kind.find(pt.kind_main)
                   = image_tag km.photo.url(:s)
@@ -97,7 +97,7 @@
                   = hidden_field_tag "texture[#{pt.id}][kind_main]", 0
                   %a.choose_textures{:href => "javascript:;", :data => {:texture_id => pt.texture_id}} выбрать
             %td
-              - if pt.as_img.to_i == 1
+              - if pt and pt.as_img.to_i == 1
                 - if pt.kind_opt.to_i > 0
                   - ko = Kind.find(pt.kind_opt)
                   = image_tag ko.photo.url(:s)
